--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss.erb
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss.erb
@@ -15,75 +15,29 @@ body {
 navbar {
   padding: 0;
   }
-/*
+
 
 @media(max-width:767px){
   
-  #landing { 
-  background: image-url('climber_phone.jpg'); 
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding-top: 0;
-  margin-top: 0;
-  height: 900px;
-  min-height: 800px;
-  overflow: hidden;
-  bottom-border: none;
 
-  }
 }
 
 @media(min-width:768px){
   
-  #landing { 
-  background: image-url('climber-nar.jpg'); 
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding-top: 0;
-  margin-top: 0;
-  height: 900px;
-  min-height: 800px;
-  overflow: hidden;
-  bottom-border: none;
-
-  }
   
 }
 
   @media(min-width:992px){
 
-   #landing { 
-  background: image-url('climber_med.jpg'); 
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding-top: 0;
-  margin-top: 0;
-  height: 900px;
-  min-height: 800px;
-  overflow: hidden;
-  width:100%;
-
-  }
 
 }
 
 @media(min-width:1200px){
 
-   #landing { 
-  background: image-url('climber.jpg'); 
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding-top: 0;
-  margin-top: 0;
-  height: 1000px;
-  min-height: 800px;
-  overflow: hidden;
-  width:100%;
-
-  }
+  
 }
 
-*/
+
 
 
 
@@ -167,8 +121,8 @@ div {
     display: none;
   }*/
 
- /* #goal-projection-status-icon {
-    display: inline;
+  /*#goal-projection-status-icon {
+    display: none;
   }*/
 }
 
@@ -189,9 +143,9 @@ div {
   /*#goal-projection-status-text {
     display: none;
   }*/
-  #goal-projection-status-icon {
+  /*#goal-projection-status-text {
     display: none;
-  }
+  }*/
   
 }
  
