--- a/weightable_practice_scaffolding/app/views/users/friends.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/friends.html.erb
@@ -1,14 +1,19 @@
+
+
+
+
 <h1 class="friends_header"><%= @user.friendships.count %> friends</h1>
+<div class="row>"
 
 <% if current_user %> 
   <% @user.friendships.each do |friendship| %>
-
+    <% @friend_id_loop = friendship.friend.id %>
     <!-- Creates bootstrap column -->
     <div class="friend_card col-md-3">
       
       <div class="friend_card_inner_border">
         <!-- Generates friend's profile image -->
-        <img class="friend_page_pic" src=<%= friendship.friend.profile_pic_url %> />
+        <img class="friend_page_pic" src=<%= friendship.friend.profile_pic_url(:sq_medium) %> />
       
         <!-- Creates link to friend's show page and capitalizes each letter in multiple names -->
         <h1 class="friend_name"><%= link_to "#{friendship.friend.name.split.map(&:capitalize).join(' ')}", user_path(friendship.friend.id) %></h1>
@@ -19,41 +24,36 @@
         <!-- Shows number of friend's friends and number of friend's weigh ins -->
         <p class="friend_profile_info"><strong><%= friendship.friend.friendships.count %></strong> friends | <strong><%= friendship.friend.weigh_ins.count %></strong> weigh-ins </p>
 
+        <div class="center-div"><%= button_to 'Remove friend', destroy_friendships_path( id: @friend_id_loop), method: :delete, :class=>"btn btn-warning" %></div>
+
         <!-- Green progress bar section -->
         <div class="friend_progress_bar_base"></div>
-          <div class="friend_progress_bar_offwhite"></div>
-            <!-- Shows progress toward friend's weigh loss goal -->
-
-            <p class="friend_progress_text"><strong>5%</strong> to goal!</p>  
-            <div class="friend_progress_bar_white_bar"></div>
-
-            <div class="prog-bar-overlay" style="width:<%= @progress %>%"></div>
-              <%= @progress %>
-              </div>
-               <!--  <div class="goal-date-con">
-                  <h4 class="no-horiz-pad inline-text text-muted"><strong><%= @user.goal %></strong> <small>lbs</small></h4>
-                      <% if current_user.goal_date %>
-                        <p class='text-muted'><%= @user.goal_date.to_formatted_s(:short) %></p>
-                      <% end %>
-                    <p id="progress-label"><strong><%=@progress%>%</strong> to goal! </p>
-                  </div>  
-                </div>   -->
-              <!-- </div> -->
-          <!-- </div> -->
+          <p class="friend_progress_text"><strong><%= friend_progress(@friend_id_loop).round %>%</strong> to goal!</p>  
+          
+          <!-- Shows progress toward friend's weigh loss goal -->
+          <div class="friend_progress_bar_white_bar"></div>
+          <div class="prog-bar-base-small"></div>
+          <div class="prog-bar-overlay-small" style="width:<%= friend_progress(@friend_id_loop) %>%"></div>
        
         </div>  
     <!-- Closes bootstrap column -->
     </div> 
   <% end %>
 <% end %>
-
+</div>
 <!-- End of row 1 -->
 <div class="row">
-
-<%= link_to(all_users_path) do %>
-  <span class="add_more_friends">Find More Friends</div>
-<% end %>
-
+  <div class="col-xs-12">
+    <div class="center-div">
+      <%= link_to(all_users_path) do %>
+        <div class="add_more_friends">
+          <h4>Find More Friends</h4>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+    
 
 
 
