--- a/weightable_practice_scaffolding/app/views/users/friends.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/friends.html.erb
@@ -24,7 +24,7 @@
         <!-- Shows number of friend's friends and number of friend's weigh ins -->
         <p class="friend_profile_info"><strong><%= friendship.friend.friendships.count %></strong> friends | <strong><%= friendship.friend.weigh_ins.count %></strong> weigh-ins </p>
 
-        <div class="center-div"><%= button_to 'Remove friend', destroy_friendships_path( id: @friend_id_loop), method: :delete, :class=>"btn btn-warning" %></div>
+        <div class="center-div"><%= button_to 'Remove friend', destroy_friendships_path( id: @friend_id_loop), method: :delete, :class=>"btn btn-orange" %></div>
 
         <!-- Green progress bar section -->
         <div class="friend_progress_bar_base"></div>
@@ -53,7 +53,7 @@
     </div>
   </div>
 </div>
-    
+
 
 
 
