--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -21,8 +21,10 @@
     <%= render 'layouts/messages' %>
     <main role="main" id="landing">
       <!-- this adds text/content to the layout after these global elements -->
+      <div id="hm-pg-img">
       <div class="container" id="words" >
 		    <%= yield %>
+     </div>
      </div>
     </main>
     <div class="footer">
