--- a/weightable_practice_scaffolding/app/views/users/all_users.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/all_users.html.erb
@@ -1,4 +1,4 @@
-<h1 class="friends_header"><%= @user.friendships.count %> friends</h1>
+<h1 class="friends_header">All Users</h1>
 
 <% if current_user %> 
   <% @users.each do |user| %>
