--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= csrf_meta_tags %>
     <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
   </head>
@@ -21,13 +22,17 @@
     <%= render 'layouts/messages' %>
     <main role="main" id="landing">
       <!-- this adds text/content to the layout after these global elements -->
-      <div id="hm-pg-img">
+      <div>
       <div class="container" id="words" >
 		    <%= yield %>
      </div>
      </div>
     </main>
     <div class="footer">
+      <% if user_signed_in? %>
+      Signed in as <%= current_user.name %>. Not you?
+      <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
+      <% end %>
     </div>
   </body>
 </html>
