--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -94,14 +94,15 @@ h3.home-sub {
 }
 
 .sign-in-btn{
-  height: 40px;
-  width: 70%;
-  color: white;
-  background: #1e8495;
-  margin: 15px 0 7px 15%;
-  .sign-in {
-  line-height: 40px;
-
+  background-color: #1e8495;
+  border-color: #186977 !important;
+  border-radius: 0;
+  color:white;
+  margin: 15px 0 7px 0;
+  &:hover {
+    background-color: #186977;
+    border-color: #186977;
+    color:white;
   }
 }
 
@@ -113,6 +114,10 @@ h3.home-sub {
 
 .pass-pad {
   padding-top: 10px;
+}
+
+.left-pad{
+  padding-left: 5px;
 }
 
 .sign-in-pad {
@@ -324,6 +329,17 @@ h3.home-sub {
   font-weight: light;
   text-align: center;
 }
+@media(max-width:767px){
+  .green-box-headers.goal-proj {
+    font-size: 1.5em;
+  }
+}
+
+  @media(max-width:991px){
+  .dash-element.goal-proj {
+    height: 145px;
+  }
+}
 
 .record-weight {
   font-size: 30px;
@@ -332,8 +348,9 @@ h3.home-sub {
 }
 
 .data-subheader{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
   font-size: 16px;
-  font-weight: 100px;
   opacity: .6;
 }
 
@@ -349,7 +366,8 @@ h3.home-sub {
 }
 
 .dashboard-data {
-  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
   font-size: 50px;
   
 }
